starting of adaptive

--- a/index.html
+++ b/index.html
@@ -29,6 +29,12 @@
                         <li><a href="#">Sign Up</a></li>
                         <li><a href="#" class="btn">Login</a></li>
                     </ul>
+
+                    <button type="button" class="nav_toggle">
+                        <div class="menu-icon-wrapper">
+                            <div class="menu-icon"></div>
+                        </div>
+                    </button>
                 </nav>
 
             </div>
