--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
                     <div class="nav_logo">
                         <h2 class="logo"><a href="index.html#header">DonCoin</a></h2>
                     </div>
-                    <ul class="nav_list">
+                    <ul class="nav_list nav_list_header">
                         <li><a href="index.html#header" class="active">Home</a></li>
                         <li><a href="index.html#instructions">Instructions</a></li>
                         <li><a href="index.html#widgets">Widgets</a></li>
