--- a/widget/index.html
+++ b/widget/index.html
@@ -5,7 +5,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>widget</title>
-    <link rel="stylesheet" href="/widget/css_widget/main.css">
+    <link rel="stylesheet" href="./css_widget/main.css">
 </head>
 <body>
     <div class="block widget">
