--- a/index.html
+++ b/index.html
@@ -109,7 +109,7 @@
                 <div class="widgets_row">
                     <div class="widgets_image">
                         <!-- <img src="./img/customers/customers.jpg" alt="Image"> -->
-                        <iframe class="wigdet-iframe-img" width="550" height="350" src="https://doncoinwidget.netlify.app/" scrolling="no"></iframe>
+                        <iframe class="widget-iframe-img" width="550" height="350" src="https://imaginative-croissant-4e655f.netlify.app" scrolling="no"></iframe>
                     </div>
 
                     <div class="widgets_content">
@@ -124,7 +124,7 @@
                                 </div>
                                 <div class="widget_size">
                                     <h2 class="widget_size-size">Size:</h2>
-                                    <p class="widget_size-number">550px x 350px</p>
+                                    <p class="widget_size-number">500px x 250px</p>
                                 </div>
                             </div>
 
@@ -132,9 +132,9 @@
                                 &lt;iframe src=
                                 <span>"https://doncoinwidget.netlify.app/"</span> 
                                 width=
-                                <span>"550"</span> 
+                                <span>"500"</span> 
                                 height=
-                                <span>"350"</span>
+                                <span>"250"</span>
                                 allowTransparency=
                                 <span>"true"</span> 
                                 scrolling=
