--- a/index.html
+++ b/index.html
@@ -109,7 +109,7 @@
                 <div class="widgets_row">
                     <div class="widgets_image">
                         <!-- <img src="./img/customers/customers.jpg" alt="Image"> -->
-                        <iframe class="widget-iframe-img" width="550" height="350" src="https://imaginative-croissant-4e655f.netlify.app" scrolling="no"></iframe>
+                        <iframe class="widget-iframe-img" width="550" height="350" src="https://donwidget.netlify.app" scrolling="no"></iframe>
                     </div>
 
                     <div class="widgets_content">
@@ -130,7 +130,7 @@
 
                             <div class="widget_code" id="widget_code">
                                 &lt;iframe src=
-                                <span>"https://doncoinwidget.netlify.app/"</span> 
+                                <span>"https://donwidget.netlify.app"</span> 
                                 width=
                                 <span>"500"</span> 
                                 height=
