--- a/widgets/widget_500x250/index.html
+++ b/widgets/widget_500x250/index.html
@@ -16,11 +16,19 @@
                 <div class="widget_image">
                     <img id="widget" src="https://test.ecom.raiffeisen.ru/api/sbp/v1/qr/ASCC39EF9FD64A34B391722CA15A12DA/image" alt="QR">
                 </div>
-                <button class="subscribe" id="changeQR">Subscribe</button>
+                <!-- <div class="checkbox">
+                    <input type="checkbox" class="checkbox_input" id="changeQR" name="subscribe">
+                    <label for="subscribe" class="checkbox_label">Subscribe</label>
+                </div> -->
+                <div class="slideThree">  
+                    <input type="checkbox" value="None" id="slideThree" name="check"/>
+                    <label for="slideThree"></label>
+                </div>
+                <div class="checkbox_label">subscribe</div>
             </div>
             <div class="block widget_main_block">
                 <h1 class="widget_title">Scan the <br> QR-code <br> to pay</h1>
-                <button type="button" id="make_donation" class="widget_button widget_button_inline">DONATE</button>
+                <button type="button" id="make_donation" class="widget_button widget_button_inline">CUSTOM SUM</button>
             </div>
         </div>
 
